--- a/youtubiu/pubspec.yaml
+++ b/youtubiu/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   http: ^0.12.2
+  flutter_youtube: ^1.1.6
 #  flutter_youtube_view: ^1.1.9
 
 dev_dependencies:
