--- a/aprenda_ingles/pubspec.yaml
+++ b/aprenda_ingles/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  audioplayers: ^0.12.0
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +49,33 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    #Imagens
+    - assets/imagens/1.png
+    - assets/imagens/2.png
+    - assets/imagens/3.png
+    - assets/imagens/4.png
+    - assets/imagens/5.png
+    - assets/imagens/6.png
+    - assets/imagens/cao.png
+    - assets/imagens/gato.png
+    - assets/imagens/leao.png
+    - assets/imagens/macaco.png
+    - assets/imagens/ovelha.png
+    - assets/imagens/vaca.png
+    #Audios
+    - assets/audios/1.mp3
+    - assets/audios/2.mp3
+    - assets/audios/3.mp3
+    - assets/audios/4.mp3
+    - assets/audios/5.mp3
+    - assets/audios/6.mp3
+    - assets/audios/cao.mp3
+    - assets/audios/gato.mp3
+    - assets/audios/leao.mp3
+    - assets/audios/macaco.mp3
+    - assets/audios/ovelha.mp3
+    - assets/audios/vaca.mp3
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
