--- a/firebase/ios/Runner/Info.plist
+++ b/firebase/ios/Runner/Info.plist
@@ -41,5 +41,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>Necessario permissao para acessar a galeria de fotos</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Necessario permissao para acessar a camera</string>
 </dict>
 </plist>
