--- a/whatsapp/pubspec.yaml
+++ b/whatsapp/pubspec.yaml
@@ -56,6 +56,7 @@ flutter:
   assets:
     - Imagens/logo.png
     - Imagens/usuario.png
+    - Imagens/bg.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
