--- a/whatsapp/pubspec.yaml
+++ b/whatsapp/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_storage: ^3.0.2
   firebase_auth: ^0.11.1+7
   image_picker: ^0.6.7+7
+  crypto: ^2.1.5
 
 dev_dependencies:
   flutter_test:
