Permitir camera e galera do ios

--- a/whatsapp/ios/Runner/Info.plist
+++ b/whatsapp/ios/Runner/Info.plist
@@ -41,5 +41,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>Necessario acesso a galeria de fotos !</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Necessario acesso a camera !</string>
 </dict>
 </plist>
