--- a/whatsapp/pubspec.yaml
+++ b/whatsapp/pubspec.yaml
@@ -33,7 +33,12 @@ dependencies:
   firebase_storage: ^3.0.2
   firebase_auth: ^0.11.1+7
   image_picker: ^0.6.7+7
-  crypto: ^2.1.5
+  flutter_launcher_icons: "^0.7.3"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "Imagens/app-icon.png"
 
 dev_dependencies:
   flutter_test:
