Localizacao do usuario

--- a/maps/pubspec.yaml
+++ b/maps/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   google_maps_flutter: ^0.5.31
+  geolocator: ^5.1.1+1
 
 dev_dependencies:
   flutter_test:
