--- a/minhasviagens/pubspec.yaml
+++ b/minhasviagens/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^0.1.3
   google_maps_flutter: ^0.5.31
   geolocator: ^5.1.2
+  firebase_core: ^0.4.0+8
+  cloud_firestore: ^0.12.9
 
 dev_dependencies:
   flutter_test:
