Dependencias do mapa para Android

--- a/uber/android/app/src/main/AndroidManifest.xml
+++ b/uber/android/app/src/main/AndroidManifest.xml
@@ -43,5 +43,9 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBWGkrwZZnw0ldZhYY2PCu9zZ2yutcAoJA"/>
+
     </application>
 </manifest>
