--- a/uber/pubspec.yaml
+++ b/uber/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_core: ^0.4.0+8
   firebase_auth: ^0.14.0
   cloud_firestore: ^0.12.9
+  google_maps_flutter: ^0.5.20+1
 
 dev_dependencies:
   flutter_test:
