--- a/uber/pubspec.yaml
+++ b/uber/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
   firebase_core: ^0.4.0+8
   firebase_auth: ^0.14.0
   cloud_firestore: ^0.12.9
-  google_maps_flutter: ^0.5.20+1
-  geolocator: ^5.1.1+1
+  google_maps_flutter: ^0.5.31
+  geolocator: ^5.1.2
 
 dev_dependencies:
   flutter_test:
