--- a/uber/pubspec.yaml
+++ b/uber/pubspec.yaml
@@ -56,6 +56,7 @@ flutter:
     - imagens/logo.png
     - imagens/motorista.png
     - imagens/passageiro.png
+    - imagens/destino.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
