--- a/uber/pubspec.yaml
+++ b/uber/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   google_maps_flutter: ^0.5.31
 #  geolocator: ^6.0.0+4
   geolocator: ^5.1.2
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
