--- a/olx/android/app/build.gradle
+++ b/olx/android/app/build.gradle
@@ -36,6 +36,7 @@ android {
         applicationId "com.example.olx"
         minSdkVersion 16
         targetSdkVersion 29
+        multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
@@ -52,3 +53,4 @@ android {
 flutter {
     source '../..'
 }
+apply plugin: 'com.google.gms.google-services'
