--- a/olx/pubspec.yaml
+++ b/olx/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  firebase_core: ^0.4.4+8
+  firebase_auth: ^0.16.0
+  firebase_storage: ^3.1.5
+  cloud_firestore: ^0.13.5
 
 dev_dependencies:
   flutter_test:
@@ -45,8 +49,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/img/logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
