--- a/olx/pubspec.yaml
+++ b/olx/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   cupertino_icons: ^1.0.0
   firebase_core: ^0.4.4+8
   firebase_auth: ^0.16.0
+#  firebase_core: ^0.5.0+1
+#  firebase_auth: ^0.18.1+2
+#  firebase_storage: ^4.0.1
+#  cloud_firestore: ^0.14.1+3
   firebase_storage: ^3.1.5
   cloud_firestore: ^0.13.5
 
