--- a/olx/pubspec.yaml
+++ b/olx/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cloud_firestore: ^0.13.5
   validadores: ^1.0.2
   brasil_fields: ^0.4.0
+  image_picker: ^0.6.5+3
 dev_dependencies:
   flutter_test:
     sdk: flutter
